Fixed attempt replays domain missalignment

--- a/src/index.styl
+++ b/src/index.styl
@@ -1256,6 +1256,7 @@ input:checked + .slider:before {
   background-color: transparent
   cursor: pointer;
   transition: background-color 0.3s;
+  width: 95px;
 }
 
 .tab-button.active {
